--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,8 @@
   font-size: 25px;
 }
 .form-container button {
-  background-color: rgb(64, 122, 154);
+  /* background-color: rgb(64, 122, 154); */
+  background-color: rgb(179, 62, 82);
   width: 100%;
   padding: 10px;
   color: white;
